@@ -303,6 +303,13 @@ function workflow_schema() {
         'type' => 'serial',
         'not null' => TRUE
       ),
+      'entity_type' => array(
+        'description' => 'The type of entity this transition belongs to.',
+        'type' => 'varchar',
+        'length' => 255,
+        'not null' => TRUE,
+        'default' => '',
+      ),
       'nid' => array(
         'description' => 'The {node}.nid this record is for.',
         'type' => 'int',
@@ -310,6 +317,27 @@ function workflow_schema() {
         'not null' => TRUE,
         'default' => 0,
         'disp-width' => '10',
+      ),
+      'field_name' => array(
+        'description' => 'The name of the field the transition relates to.',
+        'type' => 'varchar',
+        'length' => 32,
+        'not null' => TRUE,
+        'default' => '',
+      ),
+      'language' => array(
+        'description' => 'The {languages}.language of the entity.',
+        'type' => 'varchar',
+        'length' => 32,
+        'not null' => TRUE,
+        'default' => '',
+      ),
+      'delta' => array(
+        'description' => 'The sequence number for this data item, used for multi-value fields',
+        'type' => 'int',
+        'unsigned' => TRUE,
+        'not null' => TRUE,
+        'default' => 0,
       ),
       'old_sid' => array(
         'description' => 'The {workflow_states}.sid this transition started as.',
@@ -352,7 +380,7 @@ function workflow_schema() {
     ),
     'primary key' => array('hid'),
     'indexes' => array(
-      'nid' => array('nid', 'sid'),
+      'sid' => array('entity_type', 'nid', 'sid'),
     ),
   );
   $schema['workflow_node'] = array(
@@ -455,38 +483,54 @@ function workflow_update_7002() {
  * Add Entity field capabilities to workflow_scheduled_transition table.
  */
 function workflow_update_7003() {
-  db_add_field('workflow_scheduled_transition', 'entity_type', array(
-        'description' => 'The type of entity this transition belongs to.',
-        'type' => 'varchar',
-        'length' => 255,
-        'not null' => TRUE,
-        'default' => '',
-      ));
-  db_add_field('workflow_scheduled_transition', 'field_name', array(
-        'description' => 'The name of the field the transition relates to.',
-        'type' => 'varchar',
-        'length' => 32,
-        'not null' => TRUE,
-        'default' => '',
-      ));
-  db_add_field('workflow_scheduled_transition', 'language', array(
-        'description' => 'The {languages}.language of the entity.',
-        'type' => 'varchar',
-        'length' => 32,
-        'not null' => TRUE,
-        'default' => '',
-      ));
-  db_add_field('workflow_scheduled_transition', 'delta', array(
-        'description' => 'The sequence number for this data item, used for multi-value fields',
-        'type' => 'int',
-        'unsigned' => TRUE,
-        'not null' => TRUE,
-        'default' => 0,
-      ));
+  $field = array(
+    'description' => 'The type of entity this transition belongs to.',
+    'type' => 'varchar',
+    'length' => 255,
+    'not null' => TRUE,
+    'default' => '',
+  );
+  db_add_field('workflow_scheduled_transition', 'entity_type', $field);
+  db_add_field('workflow_node_history', 'entity_type', $field);
+
+  $field = array(
+    'description' => 'The name of the field the transition relates to.',
+    'type' => 'varchar',
+    'length' => 32,
+    'not null' => TRUE,
+    'default' => '',
+  );
+  db_add_field('workflow_scheduled_transition', 'field_name', $field);
+  db_add_field('workflow_node_history', 'field_name', $field);
+
+  $field = array(
+    'description' => 'The {languages}.language of the entity.',
+    'type' => 'varchar',
+    'length' => 32,
+    'not null' => TRUE,
+    'default' => '',
+   );
+  db_add_field('workflow_scheduled_transition', 'language', $field);
+  db_add_field('workflow_node_history', 'language', $field);
+
+  $field = array(
+    'description' => 'The sequence number for this data item, used for multi-value fields',
+    'type' => 'int',
+    'unsigned' => TRUE,
+    'not null' => TRUE,
+    'default' => 0,
+  );
+  db_add_field('workflow_scheduled_transition', 'delta', $field);
+  db_add_field('workflow_node_history', 'delta', $field);
 
   db_drop_index('workflow_scheduled_transition', 'nid');
+  db_drop_index('workflow_scheduled_transition', 'entity_id');
+  db_drop_index('workflow_scheduled_transition', 'entity_type');
   db_add_index('workflow_scheduled_transition', 'entity_id', array('entity_type', 'nid'));
   db_add_index('workflow_scheduled_transition', 'entity_type', array('entity_type'));
+
+  db_drop_index('workflow_node_history', 'nid');
+  db_add_index('workflow_node_history', 'sid', array('entity_type', 'nid', 'sid'));
 }
 
 /**
